--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,16 +9,21 @@ authors = [
 ]
 license = {text = "Apache-2.0"}
 readme = "README.md"
-requires-python = ">=3.8,<3.11"
+requires-python = ">=3.9,<3.11"
 dependencies = [
     "poliastro (>=0.17.0,<0.18.0)",
     "astropy (==5.2.2)",
     "tqdm (>=4.67.1,<5.0.0)",
     "gymnasium (>=1.0.0,<2.0.0)",
-    "pytest (>=8.3.4,<9.0.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.9.7"
+pytest = "^8.3.4"
+pre-commit = "^4.1.0"
+debugpy = "^1.8.12"
