--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "poliastro (>=0.17.0,<0.18.0)",
     "astropy (==5.2.2)",
     "tqdm (>=4.67.1,<5.0.0)",
+    "wandb (>=0.19.7,<0.20.0)",
     "gymnasium (>=1.0.0,<2.0.0)",
 ]
 
