--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ dependencies = [
     "tqdm (>=4.67.1,<5.0.0)",
     "wandb (>=0.19.7,<0.20.0)",
     "gymnasium (>=1.0.0,<2.0.0)",
+    "panda3d (>=1.10.15,<2.0.0)",
+    "numpy (==1.24.4)",
+    "screeninfo (>=0.8.1,<0.9.0)",
 ]
 
 
