--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "panda3d (>=1.10.15,<2.0.0)",
     "numpy (==1.24.4)",
     "screeninfo (>=0.8.1,<0.9.0)",
+    "numba (==0.60)",
 ]
 
 
@@ -31,3 +32,4 @@ ruff = "^0.9.7"
 pytest = "^8.3.4"
 pre-commit = "^4.1.0"
 debugpy = "^1.8.12"
+commitlint = "^1.3.0"
