--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "numpy (==1.24.4)",
     "screeninfo (>=0.8.1,<0.9.0)",
     "numba (==0.60)",
+    "stable-baselines3 (>=2.6.0,<3.0.0)",
 ]
 
 
