--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,6 @@ dependencies = [
     "numpy (==1.24.4)",
     "screeninfo (>=0.8.1,<0.9.0)",
     "numba (==0.60)",
-    "stable-baselines3 (>=2.6.0,<3.0.0)",
 ]
 
 
@@ -34,3 +33,6 @@ pytest = "^8.3.4"
 pre-commit = "^4.1.0"
 debugpy = "^1.8.12"
 commitlint = "^1.3.0"
+
+[project.optional-dependencies]
+example = ["stable-baselines3 (>=2.6.0,<3.0.0)"]
