--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,6 @@ dependencies = [
     "poliastro (>=0.17.0,<0.18.0)",
     "astropy (==5.2.2)",
     "tqdm (>=4.67.1,<5.0.0)",
-    "wandb (>=0.19.7,<0.20.0)",
     "gymnasium (>=1.0.0,<2.0.0)",
     "panda3d (>=1.10.15,<2.0.0)",
     "numpy (==1.24.4)",
@@ -35,4 +34,4 @@ debugpy = "^1.8.12"
 commitlint = "^1.3.0"
 
 [project.optional-dependencies]
-example = ["stable-baselines3 (>=2.6.0,<3.0.0)"]
+example = ["stable-baselines3 (>=2.6.0,<3.0.0)", "wandb (>=0.19.7,<0.20.0)"]
